--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-cli-plugin-pinia": "~0.2.4",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "2.6.14"
   },
   "eslintConfig": {
     "root": true,
